[tool.poetry]
name = "arknights"
version = "0.1.9"
description = "arknights CN request functions"
license = "MIT"
authors = [
    "djkcyl <cyl@cyllive.cn>"
]
repository = "https://github.com/djkcyl/py_arknights"


[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.21.3"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
